# blerpc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  blerpc.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-generate-handlers.yml  ci.yml
blerpc-protocol-kt/: build.gradle.kts
boards/silabs/xg22_ek2710a/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.xg22_ek2710a  board.c  board.cmake  board.yml  pre_dt_board.cmake  (+1 more)
central/: main.py
central/blerpc/: client.py  transport.py
central/tests/: test_client.py  test_command.py  test_container.py  test_integration.py
central_android/: build.gradle.kts  settings.gradle.kts
central_android/app/: build.gradle.kts
central_flutter/: README.md  pubspec.yaml
central_flutter/lib/: main.dart
central_flutter/test/: widget_test.dart
central_fw/: CMakeLists.txt  Kconfig  prj.conf
central_fw/boards/: nrf54l15dk_nrf54l15_cpuapp.conf
central_fw/src/: ble_central.c  ble_central.h  blerpc.pb.c  blerpc.pb.h  command.c  command.h  container.c  container.h  generated_client.c  generated_client.h  main.c
central_ios/: .swiftlint.yml  project.yml
central_ios/BlerpcCentral/: BlerpcCentralApp.swift  Info.plist
central_py/: main.py  requirements.txt
central_py/blerpc/: __init__.py  client.py  known_keys.py  transport.py
central_py/tests/: test_client.py  test_command.py  test_container.py  test_encryption.py  test_integration.py
central_rn/: .gitignore  app.json  eslint.config.mjs  index.js  package-lock.json  package.json  tsconfig.json
central_rn/android/: build.gradle  gradle.properties  settings.gradle
central_rn/ios/: Podfile
central_rn/src/: App.tsx
docs/: firmware-guide.md
peripheral/: CMakeLists.txt  Kconfig  prj.conf
peripheral/boards/: xg22_ek2710a.conf
peripheral/src/: ble_service.c  ble_service.h  blerpc.pb.c  blerpc.pb.h  command.c  command.h  container.c  container.h  generated_handlers.c  generated_handlers.h  handlers.c  handlers.h  main.c
peripheral/tests/: CMakeLists.txt  test_standalone.c
peripheral/tests/src/: test_command.c
peripheral_fw/: Kconfig  keys.conf.example  prj.conf
peripheral_fw/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  xg22_ek2710a.conf
peripheral_fw/src/: ble_service.c  ble_service.h  blerpc.pb.c  handlers.c  handlers.h  main.c
peripheral_fw/tests/: testcase.yaml
peripheral_py/: generated_handlers.py  requirements.txt  server.py
proto/: blerpc.options  blerpc.proto  streaming.txt
scripts/: generate_handlers.py  generate_proto.sh
tools/: generate-icons.py  rtt_reader.py
tools/generate-handlers/: gen_c_client.go  gen_c_client_test.go  gen_c_handler.go  gen_c_handler_test.go  gen_dart.go  gen_dart_test.go  gen_kotlin.go  gen_kotlin_test.go  gen_py.go  gen_py_test.go  gen_swift.go  gen_swift_test.go  gen_ts.go  gen_ts_test.go  go.mod  go.sum  helpers.go  helpers_test.go  main.go  parse.go  parse_test.go  schema.go  typemap.go
(+45 files in other folders)
