[project]
name = "blerpc"
version = "0.1.0"
description = "Type-safe RPC over Bluetooth Low Energy using Protocol Buffers"
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"central_py/blerpc/generated/blerpc_pb2.py" = ["E501", "I001"]}

[tool.ruff.format]
exclude = ["central_py/blerpc/generated/blerpc_pb2.py"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
